force-app/main/default/objects/School__c/School__c.object-meta.xml
<CustomObject>
    <label>School</label>
    <nameField>
        <displayFormat>SL-{0}</displayFormat>
        <label>School id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>School</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>