force-app/main/default/objects/School__c/fields/s_class__c.field-meta.xml
<CustomField>
    <fullName>s_class__c</fullName>
    <label>s_class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
                <default>true</default>
                <label>First</label>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>