force-app/main/default/objects/School__c/fields/s_lang__c.field-meta.xml
<CustomField>
    <fullName>s_lang__c</fullName>
    <label>s_lang</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <default>true</default>
                <label>en_US</label>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>