force-app/main/default/objects/School__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <inlineHelpText>shoes school name</inlineHelpText>
    <label>School Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>